# hackaton24-llm

./: README.md
company_data_extraction/: .gitignore  README.md  company_data.json  company_data.md  pyproject.toml  requirements.txt
company_data_extraction/src/company_data_extraction/: app.py  crew.py  main.py
company_data_extraction/src/company_data_extraction/config/: agents.yaml  tasks.yaml
