[project]
name = "company_data_extraction"
version = "0.1.0"
description = "company-data-extraction using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<=3.13"
dependencies = [
    "crewai[tools]>=0.83.0,<1.0.0"
]

[project.scripts]
company_data_extraction = "company_data_extraction.main:run"
run_crew = "company_data_extraction.main:run"
train = "company_data_extraction.main:train"
replay = "company_data_extraction.main:replay"
test = "company_data_extraction.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
